Penambahan Menu GS PRO Admin Watch List

--- a/GSOptima/appsettings.json
+++ b/GSOptima/appsettings.json
@@ -1,8 +1,9 @@
 ﻿{
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DB10283_GSStockChart;Trusted_Connection=True;MultipleActiveResultSets=true",
-    //"DefaultConnection": "Server=KP1SIDSOK01;Database=GS;User Id=sa;Password=sasasa;"
-    "DefaultConnection": "Server=202.67.10.26,25000;Database=DB10283_GSStockChart;User Id=DB10283_sa;Password=sasasa1;"
+    //"DefaultConnection": "Server=KP1SIDSOK01;Database=GS;User Id=sa;Password=sasasa;",
+    "DefaultConnection": "Server=P090WLE050852\\SQLEXPRESS;Database=DB10283_GSStockChart;User Id=sa;Password=sasasa;"
+    //"DefaultConnection": "Server=202.67.10.26,25000;Database=DB10283_GSStockChart;User Id=DB10283_sa;Password=sasasa1;"
   },
   "Logging": {
     "IncludeScopes": false,
